# wasm-wallet

./: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
extension/: Address.tsx  Balance.tsx  Send.tsx  popup.js  popup.tsx  style.css
src/: bn.rs  lib.rs
static/: manifest.json  popup.html
