[package]
name = "wasm-wallet"
version = "0.1.0"
authors = ["Alexey Shekhirin <alexey@shekhirin.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ethers = { version = "0.5.4", features = ["abigen", "legacy", "ws"] }
wasm-bindgen-futures = "0.4.28"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

web-sys = "0.3.51"
js-sys = "0.3.55"
primitive-types = { version = "0.10.1", features = ["fp-conversion"] }
async-trait = "0.1.51"

bn-rs = { version = "0.2.1" }
